Fixed HTML error

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <main class="main">
     <h1 class="main__title title">We are launching <span class="title--bold">soon!</span></h1>
     <p class="main__subtitle">Subscribe and get notified</p>
-    <form action="" method="post" class="main__form form">
+    <form method="post" class="main__form form">
       <input type="text" class="form__input input" placeholder="Your email address...">
       <div class="form__error_message error_message error_message--hidden">Please provide a valid email address</div>
       <input type="button" value="Notify Me" class="form__button">
