--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p class="footer__copyright">&copy; Copyright Ping. All rights reserved.</p>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/samuelpletain">Samuel Pletain</a>.
     </p>
   </footer>
   <script src="./main.js" type="module"></script>
